<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Music Player</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Do not translate. Duration format for duration < 1 hour -->
    <string name="durationformatshort" translatable="false"><xliff:g id="time_format">%2$d:%5$02d</xliff:g></string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string name="durationformatlong" translatable="false"><xliff:g id="time_format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string name="seek_bar_time_initial" translatable="false">00:00</string>

    <!--NavigationView-->
    <string name="artists_label">Artists</string>
    <string name="albums_label">Albums</string>
    <string name="songs_label">All Songs</string>
    <string name="genres_label">Genres</string>
    <string name="playlists_label">My playlists</string>
    <string name="recommendations_label">Recommendations</string>
    <string name="settings_label">Settings</string>

    <!--ArtistsBrowserFragment-->
    <string name="albums_quantity_label">Albums:&#160;</string>
    <string name="tracks_quantity_label">Tracks:&#160;</string>

    <string name="empty_list_message">No %1$s</string>
    <string name="albums">albums</string>
    <string name="artists">artists</string>
    <string name="songs">songs</string>
    <string name="playlists">playlists</string>
    <string name="genres">genres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_playback">PlaybackActivity</string>

    <!--MediaPlaybackService-->
    <string name="playback_failed">The player doesn\'t support this type of audio file.</string>

    <string name="unknown_album">Unknown album</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="title_activity_track_browser">TrackBrowserActivity</string>
    <string name="title_activity_detalization">DetalizationActivity</string>
    <string name="title_activity_track_detalization">TrackDetalizationActivity</string>

    <!--ConfirmationAndDeletionDialog-->
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_playlist_dialog_title">Delete playlist</string>
    <string name="delete_dialog_message">Permanently delete %1$d %2$s from device</string>
    <string name="delete_dialog_track_prompt">track</string>
    <string name="delete_dialog_tracks_prompt">tracks</string>
    <string name="delete_dialog_positive_button">Delete</string>
    <string name="delete_playlist_dialog_message">Delete %1$d %2$s</string>
    <string name="delete_dialog_playlist_prompt">playlist</string>
    <string name="delete_dialog_playlists_prompt">playlists</string>
    <string name="dialog_negative_button">Cancel</string>

    <string name="rename_dialog_title">Rename playlist</string>
    <string name="rename_dialog_positive_button">Rename</string>
    <string name="rename_dialog_result_message">Playlist renamed from \'%1$s\' to \'%2$s\'</string>
    <string name="rename_playlist_with_same_name">Same playlist name exists</string>

    <string name="new_playlist_dialog_title">New playlist</string>

    <!--MultiChoiceListener-->
    <string name="selected_text">%1$d selected</string>

    <!--AsRingtone Command-->
    <string name="ringtone_set">\"%1$s\" set as phone ringtone.</string>

    <!--AddToPlaylist Command-->
    <string name="tracks_added_to_playlist">%1$d track%2$s added to \"%3$s\" playlist.</string>
    <string name="create_new_playlist_text">New</string>

    <!--Create New Playlist Dialog-->
    <string name="create_new_playlist_positive_button">Create</string>
    <string name="create_new_playlist_title">New playlist</string>
    <string name="new_playlist_name_hint">Playlist name</string>

    <!--MediaButtons-->
    <string name="rewind_content_description">Rewind button</string>
    <string name="fast_forward_content_description">Fast Forward button</string>
    <string name="play_pause_content_description">Play/Pause button</string>
    <string name="shuffle_content_description">Shuffle button</string>
    <string name="repeat_content_description">Repeat button</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>

    <!--EditInfoActivity-->
    <string name="title_label">Title</string>
    <string name="artist_label">Artist</string>
    <string name="album_label">Album</string>
    <string name="year_label">Year</string>
    <string name="query_track_info_error">Something went wrong. Can\'t retrieve track data.</string>

    <!--Activities-->
    <string name="navigation_activity_title">@string/app_name</string>
    <string name="default_albums_detalization_activity_title">@string/albums_label</string>
    <string name="default_track_detalization_activity_title">@string/songs_label</string>
    <string name="default_edit_info_activity">Edit Info</string>

    <!--TrackInfoActivity/Fragment-->
    <string name="invalid_input">Data is invalid at %1$s field. %2$s</string>
    <string name="empty_string_invalidity_message">Field is empty.</string>
    <string name="string_to_int_invalidity_message">Field include letters or other forbidden characters.</string>

    <!--CAB Menu-->
    <string name="cab_menu_play">Play</string>
    <string name="cab_menu_delete">Delete</string>
    <string name="cab_menu_delete_playlist">Delete playlist</string>
    <string name="cab_menu_rename_playlist">Rename</string>
    <string name="cab_menu_add_to_queue">Add to play queue</string>
    <string name="cab_menu_add_to_playlist">Add to playlist</string>
    <string name="cab_menu_as_ringtone">As ringtone</string>
    <string name="cab_menu_edit_into">Edit info</string>
    <string name="cab_remove_from_queue">Remove from queue</string>
    <string name="cab_remove_from_playlist">Remove from playlist</string>


    <!--NowPlayingActivity-->
    <string name="queue_activity_title">Queue</string>
    <string name="recommendations_activity_title">Recommendations</string>

    <!--PlaylistTracklistActivity-->
    <string name="playlist_tracklist_default_toolbar_title">Playlist\'s tracks</string>

    <!--Notification-->
    <string name="notification_action_previous">Previous</string>
    <string name="notification_action_next">Next</string>
    <string name="notification_action_play">Play</string>
    <string name="notification_action_pause">Pause</string>

    <string name="now_playing_label">Now playing</string>

    <string name="choose_playing_title">Choose playlist</string>
    <string name="title_activity_recommendations">RecommendationsActivity</string>
    <string name="recom_no_internet">Connect to Internet to update recommendations</string>
    <string name="lyrics_activity_title">Lyrics</string>
    <string name="lyrics_header_tv">%1$s - %2$s</string>
    <string name="lyrics_loading_error">Sorry, couldn\'t load lyrics for this song.</string>
    <string name="lyrics_no_internet_connection">No internet connection. Lyrics can\'t be fetched</string>
</resources>
