<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_label"
        android:text="@string/title_label"
        style="@style/EditInfoActivityView" />

    <EditText
        android:id="@+id/title_input"
        style="@style/EditInfoActivityView" />

    <TextView
        android:id="@+id/artist_label"
        android:text="@string/artist_label"
        style="@style/EditInfoActivityView" />

    <EditText
        android:id="@+id/artist_input"
        style="@style/EditInfoActivityView" />

    <TextView
        android:id="@+id/album_label"
        android:text="@string/album_label"
        style="@style/EditInfoActivityView" />

    <EditText
        android:id="@+id/album_input"
        style="@style/EditInfoActivityView" />

    <TextView
        android:id="@+id/year_label"
        android:text="@string/year_label"
        style="@style/EditInfoActivityView" />

    <EditText
        android:id="@+id/year_input"
        style="@style/EditInfoActivityView" />

</LinearLayout>
